--- a/src/MoneyManager.Web/Shared/MainLayout.razor
+++ b/src/MoneyManager.Web/Shared/MainLayout.razor
@@ -3,9 +3,11 @@
 @using MoneyManager.Application.DTOs.Response
 @using System.Security.Claims
 @inherits LayoutComponentBase
+@implements IDisposable
 @inject AuthenticationStateProvider AuthStateProvider
 @inject NavigationManager Navigation
 @inject IUserProfileService ProfileService
+@inject IJSRuntime JS
 
 <CascadingAuthenticationState>
     <AuthorizeView>
@@ -16,11 +18,11 @@
                         <i class="fas fa-chart-line"></i>
                         <span>MoneyManager</span>
                     </a>
-                    
+
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    
+
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto align-items-lg-center">
                             <li class="nav-item">
@@ -59,11 +61,11 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle d-flex align-items-center user-menu-toggle" 
-                                   href="#" 
-                                   id="userDropdown" 
-                                   role="button" 
-                                   data-bs-toggle="dropdown" 
+                                <a class="nav-link dropdown-toggle d-flex align-items-center user-menu-toggle"
+                                   href="#"
+                                   id="userDropdown"
+                                   role="button"
+                                   data-bs-toggle="dropdown"
                                    aria-expanded="false">
                                     @if (!string.IsNullOrEmpty(userProfile?.ProfilePicture))
                                     {
@@ -130,7 +132,7 @@
                 var currentPath = Navigation.ToBaseRelativePath(Navigation.Uri).Split('?')[0].Trim('/');
                 var isPublicPage = currentPath == "login" || currentPath == "register";
             }
-            
+
             @if (isPublicPage)
             {
                 @Body
@@ -144,21 +146,39 @@
 </CascadingAuthenticationState>
 
 @code {
-[CascadingParameter]
-private Task<AuthenticationState>? authStateTask { get; set; }
+    [CascadingParameter]
+    private Task<AuthenticationState>? authStateTask { get; set; }
 
-[Inject]
-private NavigationManager? Nav { get; set; }
+    [Inject]
+    private NavigationManager? Nav { get; set; }
 
     [Inject]
     private AuthenticationStateProvider? CustomAuthProvider { get; set; }
 
     private UserProfileResponseDto? userProfile;
 
-protected override async Task OnInitializedAsync()
-{
-    await LoadUserProfile();
-}
+    protected override async Task OnInitializedAsync()
+    {
+        Navigation.LocationChanged += OnLocationChanged;
+        await LoadUserProfile();
+    }
+
+    private async void OnLocationChanged(object? sender, LocationChangedEventArgs e)
+    {
+        try
+        {
+            await JS.InvokeVoidAsync("moneyManager.navbar.collapse");
+        }
+        catch
+        {
+            // ignore
+        }
+    }
+
+    void IDisposable.Dispose()
+    {
+        Navigation.LocationChanged -= OnLocationChanged;
+    }
 
     private async Task LoadUserProfile()
     {
@@ -189,3 +209,4 @@ protected override async Task OnInitializedAsync()
         }
     }
 }
+
